add github token and properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8887
+github.client.id=248f68bef539bf2f3fe5
+github.client.secret=e511b5f74ae3340361cfddd8ab4473eeec08267f
+github.client.redirect=http://localhost:8887/callback
