add token check

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8887
 github.client.id=248f68bef539bf2f3fe5
 github.client.secret=e511b5f74ae3340361cfddd8ab4473eeec08267f
 github.client.redirect=http://localhost:8887/callback
+
+spring.datasource.url=jdbc:h2:file:D:/community/h2database
+spring.datasource.username=sa
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.h2.Driver
